Fixed save button "overflow" problem

--- a/static/main.css
+++ b/static/main.css
@@ -147,7 +147,7 @@ li a:active {
   border: none;
   color: white;
   text-align: center;
-  font-size: 16px;
+  font-size: 15px;
   padding: 6px;
   width: 260px;
   transition: all 0.5s;
@@ -166,12 +166,12 @@ li a:active {
   position: absolute;
   opacity: 0;
   top: 0;
-  right: -20px;
+  right: -15px;
   transition: 0.5s;
 }
 
 .button:hover span {
-  padding-right: 25px;
+  padding-right: 15px;
 }
 
 .button:hover span:after {
